--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  splashscreen: ^1.3.5
-  intl: ^0.16.1
-  sqflite: ^1.3.1+1
-  auto_size_text: ^2.1.0
-  path: ^1.7.0
-  flutter_local_notifications: ^3.0.1+2
-  timezone: ^0.5.9
-  animated_text_kit: ^2.5.3
-  animated_widgets: ^1.0.6
+  splashscreen: 
+  intl: 
+  sqflite: 
+  auto_size_text: 
+  path: 
+  flutter_local_notifications: ^7.0.0
+  timezone: 
+  animated_text_kit: 
+  animated_widgets: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
